Add 수정페이지, PUT 메소드 사용 위해 패키시 설치

--- a/views/list.ejs
+++ b/views/list.ejs
@@ -11,6 +11,7 @@
         <strong><%= posts[i].title %></strong>
         <span><%= posts[i].date %></span>
         <button type="button" data-id="<%= posts[i]._id %>" class="button-delete">삭제</button>
+        <a href="/edit/<%= posts[i]._id %>">수정</a>
     </p>
 <% } %>
 <script>
